[tool.poetry]
name = "codontest"
version = "0.1.0"
description = "python speed test & glue binding test"
license = "MIT"
authors = ["0num4 <r.oonuma@matsuri-tech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
